# eray

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  codebook.toml  imgui.ini
.zed/: debug.json  tasks.json
.zed/scripts/: cmake_build.sh  cmake_build_and_run.sh  cmake_choose_preset.sh  cmake_choose_target.sh  cmake_configure.sh  cmake_full_configure.sh
THIRD_PARTY_LICENSES/: nfd_LICENSE
cmake/: FindVulkan.cmake  add_slang_shader_target.cmake  config.hpp.in  configure_binary.cmake  configure_executable.cmake  configure_library.cmake  configure_slang_shader.cmake  copy_assets.cmake  deps_fetcher.cmake  find_repo_info.cmake  find_repo_version.cmake  generate_clangd_file.cmake  version.hpp.in
cmake/dependencies/: CMakeLists.txt
eray/: CMakeLists.txt
eray/core/os/: CMakeLists.txt
eray/core/res/: CMakeLists.txt
eray/core/util/: CMakeLists.txt
eray/core/util/public/: enum_mapper.hpp  generator.hpp
eray_old_temp/core/gpu/: CMakeLists.txt
eray_old_temp/core/math/: CMakeLists.txt
examples/: CMakeLists.txt
examples/compute_particles/: CMakeLists.txt
examples/compute_particles/compute_particles/: main.cpp  particle.cpp  particle.slang
examples/compute_shader/: CMakeLists.txt
examples/compute_shader/compute_shader/: main.cpp  main.slang  particle.cpp  particle.hpp
examples/depth_buffer/: CMakeLists.txt
examples/depth_buffer/depth_buffer/: main.cpp  vertex.hpp
examples/multithreading/: CMakeLists.txt
examples/multithreading/multithreading/: main.cpp  particle.cpp  particle.slang
examples/multiviewport/: CMakeLists.txt
examples/multiviewport/multiviewport/: main.cpp  main.slang
examples/testlib/: CMakeLists.txt
examples/testlib/private/: priv.cpp  priv.hpp
examples/testlib/test/: test.cpp
examples/vk_triangle/: CMakeLists.txt
examples/vkren_triangle/: CMakeLists.txt
liberay/: CMakeLists.txt
liberay-driver/: CMakeLists.txt
liberay-glren/: CMakeLists.txt
liberay-glren/liberay/glren/: app.cpp  app.hpp  buffer.cpp  buffer.hpp  framebuffer.hpp  framebufffer.cpp  gl_error.hpp  gl_handle.hpp  glsl_shader.cpp  glsl_shader.hpp  shader_program.cpp  shader_program.hpp  vertex_array.cpp  vertex_array.hpp
liberay-glren/liberay/glren/glfw/: gl_glfw_swap_chain.cpp  gl_glfw_swap_chain.hpp  gl_glfw_window_creator.cpp  gl_glfw_window_creator.hpp
liberay-math/: CMakeLists.txt
liberay-os/: CMakeLists.txt
liberay-os/liberay/os/: app.cpp  app.hpp  driver.hpp  error.hpp  file_dialog.cpp  file_dialog.hpp  imgui_backend.cpp  imgui_backend.hpp  input.cpp  input.hpp  operating_system.hpp  rendering_api.hpp  system.cpp  system.hpp  window_api.hpp
liberay-os/liberay/os/window/: input_codes.hpp  mouse_cursor_codes.hpp  window.hpp  window_creator.hpp  window_props.hpp
liberay-os/liberay/os/window/events/: event.hpp
liberay-os/liberay/os/window/glfw/: glfw_window.cpp  glfw_window.hpp  glfw_window_backend.cpp  glfw_window_backend.hpp
liberay-res/: CMakeLists.txt
liberay-res/liberay/res/: error.hpp  file.cpp  file.hpp  image.cpp  image.hpp  model.cpp  model.hpp  shader.hpp
liberay-util/: CMakeLists.txt
liberay-vkren/: CMakeLists.txt
liberay-vkren/docs/: decisions.md
liberay-vkren/docs/diagrams/: frames_in_flight.puml
liberay-vkren/docs/scene/: Architecture.md
liberay-vkren/liberay/vkren/: app.cpp  app.hpp  application.cpp  application.hpp  buffer.cpp  buffer.hpp  command_manager.cpp  command_manager.hpp  common.hpp  deletion_queue.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  error.hpp  example.cpp  gpu_enum.hpp  gpu_resource_manager.cpp  gpu_resource_manager.hpp  gpu_resources.cpp  gpu_resources.hpp  handle.hpp  image.cpp  image.hpp  image_description.cpp  image_description.hpp  image_format_helpers.hpp  offscreen_renderer.cpp  offscreen_renderer.hpp  pipeline.cpp  pipeline.hpp  render_graph.cpp  render_graph.hpp  resource.hpp  resource_manager.cpp  resource_manager.hpp  result.hpp  scene.hpp  shader.cpp  shader.hpp  (+10 more)
liberay-vkren/liberay/vkren/buffer/: line_strip_ring_buffer.hpp  vbo.hpp
liberay-vkren/liberay/vkren/glfw/: vk_glfw_window_creator.cpp  vk_glfw_window_creator.hpp
liberay-vkren/liberay/vkren/scene/: basic_object_pool.hpp  entity_pool.hpp  flat_tree.cpp  flat_tree.hpp  material.hpp  mesh.hpp  node_sparse_set.hpp  object_pool.hpp  scene.hpp  sparse_set.hpp  transform_tree.cpp  transform_tree.hpp
liberay-vkren/tests/vkren/scene/: sparse_set_test.cpp  transform_tree_test.cpp
liberay/liberay/driver/: glsl_shader.cpp  glsl_shader.hpp
liberay/liberay/driver/gl/: buffer.cpp  buffer.hpp  framebuffer.hpp  framebufffer.cpp  gl_error.hpp  gl_handle.hpp  shader_program.cpp  shader_program.hpp  vertex_array.cpp  vertex_array.hpp
liberay/liberay/math/: mat.hpp  mat_fwd.hpp  quat.hpp  transform3.hpp  transform3_fwd.hpp  types.hpp  vec.hpp  vec_fwd.hpp
liberay/liberay/os/: app.cpp  app.hpp  file_dialog.hpp  imgui_backend.cpp  system.cpp  system.hpp
liberay/liberay/os/window/: input_codes.hpp  mouse_cursor_codes.hpp  window.hpp  window_backend.hpp
liberay/liberay/os/window/events/: event.hpp
liberay/liberay/os/window/glfw/: glfw_mappings.hpp  glfw_window.cpp  glfw_window.hpp  glfw_window_backend.cpp  glfw_window_backend.hpp
liberay/liberay/res/: image.cpp  image.hpp
liberay/liberay/util/: generator.hpp  iterator.hpp  object_handle.hpp  observer_ptr.hpp  panic.hpp  path_utf8.cpp  ruleof.hpp  string_hash.hpp  string_views.hpp  timer.hpp  try.hpp  variant_match.hpp  visit_overload.hpp  zstring_view.hpp
liberay/tests/helpers/: math_helpers.hpp
liberay/tests/math/: transform3_test.cpp
patches/: glad.patch  imgui.patch  imguizmo.patch  nfd.patch
sandbox/: CMakeLists.txt
sandbox/assets/: blinn_phong.glsl  main.vert
sandbox/public/: main.cpp
sandbox/sandbox/: main.cpp  main.slang  particle.cpp  particle.hpp  particle.slang  vertex.hpp
sandbox/shaders/: particle.slang
template/: CMakeLists.txt
template/__targetname__/: app.cpp  app.hpp  camera.cpp  camera.hpp  error.hpp  main.cpp  mesh.cpp  mesh.hpp  mesh_phong.slang  phong.slang  ubo.slang
(+75 files in other folders)
